--- a/src/app/admin/component/adver-requests/adver-requests.component.html
+++ b/src/app/admin/component/adver-requests/adver-requests.component.html
@@ -1,62 +1,87 @@
-
-  <form class="example-form ">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>بحث</mat-label>
-      <input matInput   #name (keyup)="findByName(name)">
-    </mat-form-field>
+<form class="example-form ">
+  <mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>بحث</mat-label>
+    <input matInput #name (keyup)="findByName(name)">
+  </mat-form-field>
 </form>
-    <div class="mat-elevation-z8 mt-2  m-auto table-responsive table-responsive-sm ">
-        <table mat-table [dataSource]="dataSource"  matSort  class="m-auto border border-5 table w-100 ">
-      
-          <!-- Position Column -->
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header ></th> 
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-          </ng-container>
-      
-          <!-- Name Column -->
-          <ng-container matColumnDef="position" matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header > الاسم</th>
-            <td mat-cell *matCellDef="let element" > {{element.name}} </td>
-          </ng-container>
-      
-          <!-- Weight Column -->
-          <ng-container  matColumnDef="position" matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef > البريد الالكتروني </th>
-            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-          </ng-container>
-      
-          <!-- Symbol Column -->
-          <ng-container  matColumnDef="position" matColumnDef="address">
-            <th mat-header-cell *matHeaderCellDef  > العنوان</th>
-            <td mat-cell *matCellDef="let element"> {{element.address.city}} </td>
-          </ng-container>
+<div class="mat-elevation-z8 mt-2  m-auto table-responsive table-responsive-sm " *ngIf="length>0 else alter">
+  <table mat-table [dataSource]="dataSource" matSort class="m-auto border border-5 table w-100 table-bordered">
 
-          <!-- block Column -->
-          <ng-container matColumnDef="block">
-            <th mat-header-cell *matHeaderCellDef> قبول</th>
-            <td mat-cell *matCellDef="let element">  <button  type="button" class="btn btn-secondary m-1"><span class="material-icons">قبول</span></button> </td>
+    <!-- Position Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
 
-          </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="position" matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> title</th>
+      <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+    </ng-container>
 
-           <!-- delete Column -->
-          <ng-container matColumnDef="delete">
-            <th mat-header-cell *matHeaderCellDef> رفض</th>
-            <td mat-cell *matCellDef="let element">  <button  type="button" class="btn btn-secondary m-1"><span class="material-icons">رفض</span></button> </td>
-          </ng-container>
-         
-         
-      
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-      
-        <mat-paginator  #paginator [length]="10"
-        [pageSize]="10" showFirstLastButtons
-        [pageSizeOptions]="[5,2,10]"
-        aria-label="Select page"
-        aria-label="Select page of periodic elements">
-                      
-        </mat-paginator>
-      </div>
-      
+    <!-- Weight Column -->
+    <ng-container matColumnDef="position" matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef> السعر </th>
+      <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="position" matColumnDef="bedroom_num">
+      <th mat-header-cell *matHeaderCellDef> عدد الغرف</th>
+      <td mat-cell *matCellDef="let element"> {{element.bedroom_num}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="position" matColumnDef="level">
+      <th mat-header-cell *matHeaderCellDef> الطابق</th>
+      <td mat-cell *matCellDef="let element"> {{element.level}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="position" matColumnDef="beds_num">
+      <th mat-header-cell *matHeaderCellDef> عدد السرائر</th>
+      <td mat-cell *matCellDef="let element"> {{element.beds_num}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="position" matColumnDef="bathroom_num">
+      <th mat-header-cell *matHeaderCellDef> عدد الحمامات</th>
+      <td mat-cell *matCellDef="let element"> {{element.bathroom_num}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="position" matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> الوصف </th>
+      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+    </ng-container>
+    <!-- block Column -->
+    <ng-container matColumnDef="accept">
+      <th mat-header-cell *matHeaderCellDef> قبول</th>
+      <td mat-cell *matCellDef="let element"> <button (click)="accept(element.id)" type="button" class="btn btn-secondary m-1"><span
+            class="material-icons">قبول</span></button> </td>
+
+    </ng-container>
+
+    <!-- delete Column -->
+    <ng-container matColumnDef="reject">
+      <th mat-header-cell *matHeaderCellDef> رفض</th>
+      <td mat-cell *matCellDef="let element"> <button (click)="reject(element.id)" type="button" class="btn btn-secondary m-1"><span
+            class="material-icons">رفض</span></button> </td>
+    </ng-container>
+
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator #paginator [length]="10" [pageSize]="10" showFirstLastButtons [pageSizeOptions]="[5,2,10]"
+    aria-label="Select page" aria-label="Select page of periodic elements">
+
+  </mat-paginator>
+</div>
+
+<ng-template #alter >
+  <h1 class="bg-light text-center">لا يوجد طلبات اعلانات حاليا</h1>
+ </ng-template>
+ 
