--- a/src/app/admin/component/owners/owners.component.css
+++ b/src/app/admin/component/owners/owners.component.css
@@ -7,10 +7,24 @@
 .example-full-width {
   width: 100%;
 }
-th.mat-header-cell{
-  text-align: center !important;
-}
+ th.mat-header-cell{
+  border: none;
+} 
 th.mat-sort-header-container {
   justify-content: center !important;
   align-items: center;
+}
+
+table{
+  width: 100%;
+  overflow-x: auto;
+  table-layout:auto;
+}
+td.mat-cell{
+  padding: 4px;
+}
+
+button{
+  background-color:#FE6F41;
+
 }
