--- a/src/app/admin/component/renters/renters.component.css
+++ b/src/app/admin/component/renters/renters.component.css
@@ -1,16 +1,24 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
-  th.mat-header-cell{
-    text-align: center !important;
-  }
-  th.mat-sort-header-container {
-    justify-content: center !important;
-    align-items: center;
+.example-full-width {
+  width: 100%;
+}
+ th.mat-header-cell{
+  border: none;
+} 
+th.mat-sort-header-container {
+  justify-content: center !important;
+  align-items: center;
+}
+
+table{
+  width: 100%;
+  overflow-x: auto;
+  table-layout:auto;
+}
+td.mat-cell{
+  padding: 4px;
+}
+
+button{
+  background-color:#FE6F41;
+
 }
